[gd_scene format=3 uid="uid://csfdwvgftutdd"]

[ext_resource type="Texture2D" uid="uid://1atg8wcju06l" path="res://art/assets/prototipo.png" id="1_bap5c"]
[ext_resource type="Script" uid="uid://bgrdsb4lnscbd" path="res://scripts/gameover.gd" id="1_uq3gy"]
[ext_resource type="Texture2D" uid="uid://cc2hmucybm2qh" path="res://art/assets/background-escena-final.png" id="2_r4xji"]
[ext_resource type="FontFile" uid="uid://cc6q3vdvv2kti" path="res://fonts/VT323-Regular.ttf" id="4_mgr8q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uq3gy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mgr8q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_73xo7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jftvr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2jp4b"]

[node name="Gameover" type="Node2D" unique_id=802098204]
script = ExtResource("1_uq3gy")

[node name="TextureRect" type="TextureRect" parent="." unique_id=626863320]
modulate = Color(1, 1, 1, 0.18431373)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 53.0
offset_right = 1927.0
offset_bottom = 1013.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bap5c")

[node name="TextureRect2" type="TextureRect" parent="." unique_id=1816242076]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 218.0
offset_top = 94.0
offset_right = 1754.0
offset_bottom = 958.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_r4xji")

[node name="Player1" type="Label" parent="." unique_id=233476023]
offset_left = 634.0
offset_top = 391.0
offset_right = 780.0
offset_bottom = 566.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_mgr8q")
theme_override_font_sizes/font_size = 128
text = "12"

[node name="Player2" type="Label" parent="." unique_id=1824912597]
offset_left = 1186.0
offset_top = 387.0
offset_right = 1332.0
offset_bottom = 562.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_mgr8q")
theme_override_font_sizes/font_size = 128
text = "12"

[node name="Button" type="Button" parent="." unique_id=834268892]
offset_left = 723.0
offset_top = 653.0
offset_right = 1242.0
offset_bottom = 736.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_mgr8q")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_uq3gy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mgr8q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_73xo7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jftvr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2jp4b")
text = "Siguiente partida"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
